--- a/circle_wallet/example/ios/Podfile
+++ b/circle_wallet/example/ios/Podfile
@@ -1,5 +1,7 @@
-# Uncomment this line to define a global platform for your project
-# platform :ios, '13.0'
+source 'https://github.com/circlefin/w3s-ios-sdk.git'
+source 'https://github.com/CocoaPods/Specs.git'
+
+platform :ios, '16.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -34,8 +36,15 @@ target 'Runner' do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
+
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+
+     target.build_configurations.each do |config|
+         config.build_settings["ONLY_ACTIVE_ARCH"] = "NO"
+         config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+         config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+     end
   end
 end
