--- a/circle_wallet/example/pubspec.yaml
+++ b/circle_wallet/example/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_sign_in: ^7.2.0
   circle_wallet:
     # When depending on this package from a real application you should use:
     #   circle_wallet: ^x.y.z
